--- a/templates/webCreateFiles/index.html
+++ b/templates/webCreateFiles/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="{{style}}" />
-        <title>{{title}}</title>
-    </head>
-    <body>
-        {{content}}
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="{{style}}" />
+    <script src="{{script}}"></script>
+    <title>{{title}}</title>
+  </head>
+  <body>
+    {{content}}
+  </body>
 </html>
